Fix pagination on mobile

--- a/assets/css/_pagination.scss
+++ b/assets/css/_pagination.scss
@@ -15,3 +15,8 @@
       text-decoration: none;
       color: #fff;
 }
+@media screen and (max-width: 425px) {
+  .pagination > li {
+    padding: 0;
+  }
+}
